# serializer version: 1
# name: test_custom_query_hook_order_by[session-tracked-orderedFruits-async-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-tracked-orderedFruits-async-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-tracked-orderedFruits-sync-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.name ASC
  '''
# ---
# name: test_custom_query_hook_order_by[session-tracked-orderedFruitsPaginated-async-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.name ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS fruit
   ORDER BY fruit.name ASC
   LIMIT $3::INTEGER
  '''
# ---
# name: test_custom_query_hook_order_by[session-tracked-orderedFruitsPaginated-async-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.name ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.name ASC
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_custom_query_hook_order_by[session-tracked-orderedFruitsPaginated-sync-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           ORDER BY fruit.name ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.name ASC
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_custom_query_hook_where[session-tracked-filteredFruits-async-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = $1::VARCHAR
  '''
# ---
# name: test_custom_query_hook_where[session-tracked-filteredFruits-async-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = %(name_1)s::VARCHAR
  '''
# ---
# name: test_custom_query_hook_where[session-tracked-filteredFruits-sync-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = %(name_1)s::VARCHAR
  '''
# ---
# name: test_custom_query_hook_where[session-tracked-filteredFruitsPaginated-async-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           WHERE fruit.name = $1::VARCHAR
           LIMIT $2::INTEGER
          OFFSET $3::INTEGER
         ) AS fruit
   WHERE fruit.name = $4::VARCHAR
   LIMIT $5::INTEGER
  '''
# ---
# name: test_custom_query_hook_where[session-tracked-filteredFruitsPaginated-async-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           WHERE fruit.name = %(name_1)s::VARCHAR
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   WHERE fruit.name = %(name_2)s::VARCHAR
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_custom_query_hook_where[session-tracked-filteredFruitsPaginated-sync-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM (
          SELECT fruit.name AS name,
                 fruit.id AS id
            FROM fruit AS fruit
           WHERE fruit.name = %(name_1)s::VARCHAR
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   WHERE fruit.name = %(name_2)s::VARCHAR
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_columns_hook[session-tracked-fruits-async-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.adjectives,
         fruit.id
    FROM fruit AS fruit
  '''
# ---
# name: test_load_columns_hook[session-tracked-fruits-async-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.adjectives,
         fruit.id
    FROM fruit AS fruit
  '''
# ---
# name: test_load_columns_hook[session-tracked-fruits-sync-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.adjectives,
         fruit.id
    FROM fruit AS fruit
  '''
# ---
# name: test_load_columns_hook[session-tracked-fruitsPaginated-async-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.adjectives,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 fruit.adjectives AS adjectives
            FROM fruit AS fruit
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS fruit
   LIMIT $3::INTEGER
  '''
# ---
# name: test_load_columns_hook[session-tracked-fruitsPaginated-async-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.adjectives,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 fruit.adjectives AS adjectives
            FROM fruit AS fruit
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_columns_hook[session-tracked-fruitsPaginated-sync-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.adjectives,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.name AS name,
                 fruit.adjectives AS adjectives
            FROM fruit AS fruit
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colors-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colors-async-asyncpg_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.adjectives AS fruit_adjectives,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.id AS fruit_id,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colors-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colors-async-psycopg_async_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.adjectives AS fruit_adjectives,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.id AS fruit_id,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colors-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colors-sync-psycopg_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.adjectives AS fruit_adjectives,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.id AS fruit_id,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colorsPaginated-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM (
          SELECT color.id AS id
            FROM color AS color
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS color
   LIMIT $3::INTEGER
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colorsPaginated-async-asyncpg_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.adjectives AS fruit_adjectives,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.id AS fruit_id,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colorsPaginated-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM (
          SELECT color.id AS id
            FROM color AS color
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colorsPaginated-async-psycopg_async_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.adjectives AS fruit_adjectives,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.id AS fruit_id,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colorsPaginated-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM (
          SELECT color.id AS id
            FROM color AS color
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_relationships_nested[session-tracked-colorsPaginated-sync-psycopg_engine].1
  '''
  SELECT fruit.color_id AS fruit_color_id,
         fruit.name AS fruit_name,
         fruit.adjectives AS fruit_adjectives,
         fruit.derived_product_id AS fruit_derived_product_id,
         fruit.id AS fruit_id,
         fruit.created_at AS fruit_created_at,
         fruit.updated_at AS fruit_updated_at,
         fruit_farm_1.name AS fruit_farm_1_name,
         fruit_farm_1.id AS fruit_farm_1_id
    FROM fruit
    LEFT OUTER JOIN fruit_farm AS fruit_farm_1
      ON fruit.id = fruit_farm_1.fruit_id
   WHERE fruit.color_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruits-async-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruits-async-asyncpg_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.id AS fruit_farm_id,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruits-async-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruits-async-psycopg_async_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.id AS fruit_farm_id,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruits-sync-psycopg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruits-sync-psycopg_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.id AS fruit_farm_id,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruitsPaginated-async-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS fruit
   LIMIT $3::INTEGER
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruitsPaginated-async-asyncpg_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.id AS fruit_farm_id,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruitsPaginated-async-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruitsPaginated-async-psycopg_async_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.id AS fruit_farm_id,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruitsPaginated-sync-psycopg_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_relationships_no_columns[session-tracked-fruitsPaginated-sync-psycopg_engine].1
  '''
  SELECT fruit_farm.fruit_id AS fruit_farm_fruit_id,
         fruit_farm.name AS fruit_farm_name,
         fruit_farm.id AS fruit_farm_id,
         fruit_farm.created_at AS fruit_farm_created_at,
         fruit_farm.updated_at AS fruit_farm_updated_at
    FROM fruit_farm
   WHERE fruit_farm.fruit_id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooks-async-asyncpg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooks-async-asyncpg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooks-async-psycopg_async_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooks-async-psycopg_async_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooks-sync-psycopg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooks-sync-psycopg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooksPaginated-async-asyncpg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM (
          SELECT color.id AS id,
                 color.id AS id__1
            FROM color AS color
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   LIMIT $3::INTEGER
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooksPaginated-async-asyncpg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooksPaginated-async-psycopg_async_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM (
          SELECT color.id AS id,
                 color.id AS id__1
            FROM color AS color
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooksPaginated-async-psycopg_async_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooksPaginated-sync-psycopg_engine]
  '''
  SELECT color__fruits.id,
         color.id AS id_1
    FROM (
          SELECT color.id AS id,
                 color.id AS id__1
            FROM color AS color
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_relationships_on_nested_field[session-tracked-colorsHooksPaginated-sync-psycopg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruits-async-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruits-async-asyncpg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruits-async-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruits-async-psycopg_async_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruits-sync-psycopg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruits-sync-psycopg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruitsPaginated-async-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS fruit
   LIMIT $3::INTEGER
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruitsPaginated-async-asyncpg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruitsPaginated-async-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruitsPaginated-async-psycopg_async_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruitsPaginated-sync-psycopg_engine]
  '''
  SELECT fruit.id
    FROM (
          SELECT fruit.id AS id
            FROM fruit AS fruit
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_load_relationships_with_columns[session-tracked-fruitsPaginated-sync-psycopg_engine].1
  '''
  SELECT fruit_1.id AS fruit_1_id,
         color.name AS color_name,
         color.id AS color_id,
         color.created_at AS color_created_at
    FROM fruit AS fruit_1
    JOIN color
      ON color.id = fruit_1.color_id
   WHERE fruit_1.id IN (__[POSTCOMPILE_primary_keys])
  '''
# ---
# name: test_query_hook_on_type[session-tracked-async-asyncpg_engine]
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.name = $1::VARCHAR
  '''
# ---
# name: test_query_hook_on_type[session-tracked-async-psycopg_async_engine]
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.name = %(name_1)s::VARCHAR
  '''
# ---
# name: test_query_hook_on_type[session-tracked-sync-psycopg_engine]
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.name = %(name_1)s::VARCHAR
  '''
# ---
